<resources>
    <string name="app_name">ToDo App</string>
    <string name="num">Num</string>
    <string name="task">task</string>
    <string name="com">com</string>
    <string name="num_sign">#</string>
    <string name="header_task">Task</string>
    <string name="header_comp">✔</string>
    <string name="add_dialog_head">Add</string>
    <string name="ok">ОК</string>
    <string name="cancel">Cancel</string>
    <string name="detail_head">Details</string>
    <string name="complete_task">Complete task</string>
    <string name="close">Close</string>
    <string name="close_task">Complete task</string>
    <string name="detail_dial_task_name">Task</string>
    <string name="detail_dial_add_date">Added</string>
    <string name="detail_dial_end_date">Completed</string>
    <string name="detail_dial_descr">Description</string>
    <string name="to_archive">To archive</string>
    <string name="to_cancelled">Cancel</string>
    <string name="archived">Archived</string>
    <string name="cancelled">Cancelled</string>
    <string name="menu_active">Active</string>
    <string name="menu_incomplete">Incompleted</string>
    <string name="menu_complete">Completed</string>
    <string name="menu_cancelled">Cancelled</string>
    <string name="menu_archive">Archive</string>
    <string name="undo">Undo</string>
    <string name="task_cancelled">Task cancelled</string>
    <string name="task_archived">Task archived</string>
    <string name="title_active">Active tasks</string>
    <string name="title_incomplete">Incomplete tasks</string>
    <string name="title_complete">Completed tasks</string>
    <string name="title_cancelled">Cancelled task</string>
    <string name="title_archived">Archived tasks</string>
    <string name="add_dialog_error">Should not be empty</string>
    <string name="item_timeless">Timeless</string>

    <string-array name="deadline_spinner_menu">
        <item>Timeless</item>
        <item>Today</item>
        <item>Tomorrow</item>
        <item>Pick the date</item>
    </string-array>
    <string name="item_today">Today</string>
    <string name="item_tomorrow">Tomorrow</string>
    <string name="item_yesterday">Yesterday</string>
</resources>
