<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_active"
            android:icon="@drawable/ic_event_active_black_24dp"
            android:title="@string/menu_active" />
        <item
            android:id="@+id/nav_incomplete"
            android:icon="@drawable/ic_event_incomplete_24dp"
            android:title="@string/menu_incomplete" />
        <item
            android:id="@+id/nav_complete"
            android:icon="@drawable/ic_event_complete_black_24dp"
            android:title="@string/menu_complete" />
        <item
            android:id="@+id/nav_cancelled"
            android:icon="@drawable/ic_event_cancel_black_24dp"
            android:title="@string/menu_cancelled" />
        <item
            android:id="@+id/nav_archive"
            android:icon="@drawable/ic_archive_black_24dp"
            android:title="@string/menu_archive" />
    </group>
</menu>