<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="30dp">

    <TextView
        android:text="@string/num_sign"
        android:gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_width="30dp"
        android:layout_height="30dp"/>
    <TextView
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:gravity="center_vertical"
        android:text="@string/header_task"
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="30dp" />
    <TextView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="0.5"
        android:text="@string/header_comp"/>
</LinearLayout>