<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="task"
            type="com.example.maxpayne.mytodoapp.db.dao.Task" />
        <variable
            name="ut"
            type="com.example.maxpayne.mytodoapp.ui.DetailTaskFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/detail_tvTaskNameHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/detail_dial_task_name"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/detail_dial_task_name" />

        <TextView
            android:id="@+id/detail_tvTaskName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="24sp"
            android:text="@{task.task}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/detail_tvTaskNameHead"
            app:layout_constraintTop_toBottomOf="@+id/detail_tvTaskNameHead"
            tools:text="@string/detail_dial_task_name" />

        <TextView
            android:id="@+id/detail_tvAddDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:lines="2"
            android:singleLine="false"
            android:textSize="18sp"
            android:text="@{ut.convertDate(task.add_date)}"
            app:layout_constraintStart_toStartOf="@+id/detail_tvTaskName"
            app:layout_constraintTop_toBottomOf="@+id/detail_tvTaskName"
            tools:text="@string/detail_dial_add_date" />

        <TextView
            android:id="@+id/detail_tvEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:lines="2"
            android:singleLine="false"
            android:textSize="18sp"
            android:text="@{task.end_date != null ? ut.convertDate(task.end_date) : @string/close_task}"
            app:layout_constraintBaseline_toBaselineOf="@+id/detail_tvAddDate"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/detail_dial_end_date" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="395dp"
            android:layout_height="442dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_tvAddDate">

            <TextView
                android:id="@+id/detail_tvDescription"
                android:text="@{task.description}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="395dp"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>